feat: header layout - image and background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<!--<h1>Hello {{title}}</h1> -->
+<header>
+    <img class="header__img" src="../assets/images/bg-header-mobile.svg" alt="" srcset="">    
+</header>
 
 <!-- <button (click)="toggleImage()">Show Image</button>
 
