--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Spartan:400,500,700&display=swap');
+body {
+    font-family: 'Spartan', sans-serif;
+}
+
 * {
     padding: 0;
     margin: 0;
