--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css";
+/*@import "~bootstrap/dist/css/bootstrap.min.css";*/
 @import url('https://fonts.googleapis.com/css?family=Spartan:400,500,700&display=swap');
 body {
     font-family: 'Spartan', sans-serif;
