--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,13 @@
 header {
-   /* background-image: url("../assets/images/bg-header-mobile.svg");
-    background-repeat: no-repeat;*/
-    background-color: hsl(180, 29%, 50%);
-    background-size: contain;
+  /*  background-image: url("../assets/images/bg-header-mobile.svg"); */
+    
+    background-color: rgb(91, 164, 164);
+    background-size: contain;  
+    background-repeat: no-repeat; 
 }
 .header__img {
-    width: 100%;    
+    width: 100%;  
+    height: 158px;    
 }
 
 .mainSection {
@@ -48,7 +50,22 @@ img.card__img {
 }
 .card__features__item {
     margin-left: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 15px;   
+}
+.company {
+    color: hsl(180, 29%, 50%);
+}
+.newFeatures {
+    background-color:  hsl(180, 29%, 50%);
+    padding: 3px 7px;
+    border-radius: 20px;
+    color: white;
+}
+.featured {
+    padding: 3px 7px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
 }
 .card__primary__position {
     margin-left: 29px;
@@ -80,4 +97,9 @@ img.card__img {
 }
 .languages {
     flex-grow: 3;
+}
+
+@media screen and(min-width: 790px) {
+             
+       
 }
