--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <header>
-    <img class="header__img" src="../assets/images/bg-header-mobile.svg" alt="" srcset="">
+    <picture>
+        <source media="(min-width: 790px)" srcset="../assets/images/bg-header-desktop.svg">
+     <!--  <source media="(min-width: 480px)" srcset="../assets/images/bg-header-desktop.svg"> -->
+       <img class="header__img" src="../assets/images/bg-header-mobile.svg" alt=""> 
+    </picture>
+
 </header>
 <main class="mainSection">
     <div class="cards" *ngFor="let item of jobRoles">
@@ -8,16 +13,16 @@
                 <img class="card__img" [src]="item.logo" alt="">
                 <div class="card__features">
                     <h4 class="card__features__item company">{{item.company}}</h4>
-                    <h4 class="card__features__item newFeatures">{{item.new ? "new" : ""}}</h4>
-                    <h4 class="card__features__item featured">{{item.featured ? "featured" : ""}}</h4>
+                    <h4 class="card__features__item newFeatures" *ngIf="item.new">NEW!</h4>
+                    <h4 class="card__features__item featured" *ngIf="item.featured">FEATURED</h4>
                 </div>
                 <h4 class="card__primary__position">{{item.position}}</h4>
                 <ul class="card__contract">
-                    <li class="card__contract__item posting" >{{item.postedAt}}</li>
+                    <li class="card__contract__item posting">{{item.postedAt}}</li>
                     <li class="card__contract__item contract">{{item.contract}}</li>
                     <li class="card__contract__item location">{{item.location}}</li>
                 </ul>
-               
+
             </div>
 
             <div class="card__secondary">
