--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Spartan:400,500,700&display=swap');
 body {
     font-family: 'Spartan', sans-serif;
+    font-size: 15px;
 }
 
 * {
