--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
             <div class="card__secondary">
                 <h5 class="card__secondary__item role">{{item.role}}</h5>
                 <h5 class="card__secondary__item level">{{item.level}}</h5>
-                <h5 class="card__secondary__item languages">{{item.languages}}</h5>
+                <h5 class="card__secondary__item languages" *ngFor="let language of item.languages">{{language}}</h5>
 
             </div>
 
