--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
                 <h5 class="card__secondary__item role">{{item.role}}</h5>
                 <h5 class="card__secondary__item level">{{item.level}}</h5>
                 <h5 class="card__secondary__item tools" *ngFor="let tool of item.tools" >{{tool}}</h5>
-                <h5 class="card__secondary__item languages" *ngFor="let language of item.languages">{{language}}</h5>
+                <h5 class="card__secondary__item languages" *ngFor="let language of item.languages" (click)="Submit(language)">{{language}}</h5>
 
             </div>
 
