--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,10 @@
     </picture>
 
 </header>
+  <!-- <app-categories [title]="title"></app-categories> -->
+
 <main class="mainSection">
-    <div class="cards" *ngFor="let item of jobRoles">
+    <div class="cards" *ngFor="let item of filteredRoles">
         <div class="card">
             <div class="card__primary">
                 <img class="card__img" [src]="item.logo" alt="">
@@ -26,8 +28,8 @@
             </div>
 
             <div class="card__secondary" >
-                <h5 class="card__secondary__item role">{{item.role}}</h5>
-                <h5 class="card__secondary__item level">{{item.level}}</h5>
+                <h5 class="card__secondary__item role" (click)="Submit(item.role)">{{item.role}}</h5>
+                <h5 class="card__secondary__item level" (click)="Submit(item.level)" >{{item.level}}</h5>
                 <h5 class="card__secondary__item tools" *ngFor="let tool of item.tools" >{{tool}}</h5>
                 <h5 class="card__secondary__item languages" *ngFor="let language of item.languages" (click)="Submit(language)">{{language}}</h5>
 
