--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,21 @@
-header {
-  /*  background-image: url("../assets/images/bg-header-mobile.svg"); */
-    
-    background-color: rgb(91, 164, 164);
-    background-size: contain;  
-    background-repeat: no-repeat; 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-.header__img {
-    width: 100%;  
-    height: 158px;    
+body {
+    background-color: hsl(180, 52%, 96%);
+    position: relative;
+}
+
+app-filter {
+    position: relative;
+    top: -27px;
 }
 
 .mainSection {
-    background-color:  hsl(180, 52%, 96%) ;  
+   /* background-color:  hsl(180, 52%, 96%) ;  */
     padding-top: 10px;
-}
-.filterSection {
-    background-color: white;
-    width: 80%;
-    padding: 15px;
-    margin: auto;
-    display: none;
 }
 .cards {
     padding: 45px 0 45px 0;
