trial: ngIf to hide a div when it is not populated

--- a/src/app/filter/filter.component.css
+++ b/src/app/filter/filter.component.css
@@ -6,9 +6,9 @@
 .filterSection {
     background-color: white;
     width: 80%;
-    padding: 15px;
+    padding: 20px;
     margin: auto;
-    display: none;
+    /* display: none; */
 }
 .filterDisplay {
     display: block;
