--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,3 +1,3 @@
-<div class="filterSection" *ngIf="hasChildren" >
-    <h2>hie 5</h2>
+<div  class="filterSection"  >
+    <h2 *ngIf="true">Frontend</h2>
 </div> 
